--- a/appagenda/package.json
+++ b/appagenda/package.json
@@ -16,11 +16,15 @@
     "bootstrap": "^5.1.3"
   },
   "devDependencies": {
-    "cordova-android": "^10.1.2"
+    "cordova-android": "^10.1.2",
+    "cordova-plugin-splashscreen": "^6.0.1"
   },
   "cordova": {
     "platforms": [
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-splashscreen": {}
+    }
   }
 }
